force-app/main/default/objects/Grant_Permission__mdt/Grant_Permission__mdt.object-meta.xml
<CustomObject>
    <label>Grant Permission</label>
    <pluralLabel>Grant Permissions</pluralLabel>
</CustomObject>