force-app/main/default/objects/Grant_Permission__mdt/fields/Edit_Object__c.field-meta.xml
<CustomField>
    <fullName>Edit_Object__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Edit Object</label>
    <type>Checkbox</type>
</CustomField>