force-app/main/default/objects/Grant_Permission__mdt/fields/Modify_All__c.field-meta.xml
<CustomField>
    <fullName>Modify_All__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Modify All</label>
    <type>Checkbox</type>
</CustomField>