force-app/main/default/objects/Grant_Permission__mdt/fields/View_All__c.field-meta.xml
<CustomField>
    <fullName>View_All__c</fullName>
    <defaultValue>false</defaultValue>
    <label>View All</label>
    <type>Checkbox</type>
</CustomField>